--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
       <h1>welcome to Ella's Portfolio</h1>
-    
+        meow mewo
+        <strong>meow</strong>
 
     
     </body>
