--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
       <h1>welcome to Ella's Portfolio</h1>
-        
+        <strong>meow meow meow<strong>
     </body>
 </html>
