--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Ella's Programming Portfolio</title>
     </head>
     <body>
+        <img src="csc106_banner.jpg">
       <h1>welcome to Ella's Portfolio</h1>
-        <strong>meow meow meow<strong>
+        This webpage acts as a resource in regards to the programs I have created!
     </body>
 </html>
