--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
         <img src="csc106_banner.jpg">
         <img src="home button img CSC106.png">
+        <img src="about me button img CSC106.png">
+        <img src="buttons image CSC106.png">
       <h1>welcome to Ella's Portfolio</h1>
        
         This webpage acts as a resource in regards to the programs I have created!
