--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <img src="home button img CSC106.png">
         <img src="about me button img CSC106.png">
         <img src="buttons image CSC106.png">
-      <h1>welcome to Ella's Portfolio</h1>
+      <h1>Welcome to Ella's Portfolio</h1>
        
-        This webpage acts as a resource in regards to the programs I have created!
+        This webpage acts as a resource in regards to the programs I have created at the University of Rhode Island!
     </body>
 </html>
