--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <title>Ella's Programming Portfolio</title>
     </head>
     <body>
-        <img src="csc106_banner.jpg">
+        <img src="csc106_banner.jpg"alt="CSC"class="center">
         <img src="home button img CSC106.png">
         <img src="about me button img CSC106.png">
         <img src="buttons image CSC106.png">
       <h1>Welcome to Ella's Portfolio</h1>
        
-        This webpage acts as a resource in regards to the programs I have created at the University of Rhode Island!
+        <p>This webpage acts as a resource in regards to the programs I have created at the University of Rhode Island.</p>
     </body>
 </html>
