--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <title>Ella's Programming Portfolio</title>
     </head>
     <body>
+        .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        }
         <img src="csc106_banner.jpg"alt="CSC"class="center">
         <img src="home button img CSC106.png">
         <img src="about me button img CSC106.png">
