--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Ella's Programming Portfolio</title>
     </head>
     <body>
-        <img src="csc106_banner.jpg"class="centerImage"alt="CSC banner">
+        <img src="csc106_banner.jpg">
+        <p align="center">
+            <img width="400" height="200" src=</p>
         <img src="home button img CSC106.png">
         <img src="about me button img CSC106.png">
         <img src="buttons image CSC106.png">
