--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Ella's Programming Portfolio</title>
     </head>
     <body>
+      <p align="center">
         <img src="csc106_banner.jpg">
         <img src="home button img CSC106.png">
         <img src="about me button img CSC106.png">
