--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
       <p align="center">
         <img src="csc106_banner.jpg">
+      <p align="center">
         <img src="home button img CSC106.png">
         <img src="about me button img CSC106.png">
         <img src="buttons image CSC106.png">
