--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img src="buttons image CSC106.png">
       <h1>Welcome to Ella's Portfolio</h1>
        
-        <p>This webpage acts as a resource in regards to the programs I have created at the University of Rhode Island.</p>
+        <p>This webpage acts as a resource in regards to the programs I have created at the University of Rhode Island. 
+            I wrote this webpage using HTML which is a well known programming langauge.</p>
     </body>
 </html>
