--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
-            <a href="https://www.uri.edu">the University of Rhode Island.</a> 
+            <a target=" black" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I wrote this webpage using HTML which is a well known programming langauge.</p>
     </body>
 </html>
