--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Ella's Programming Portfolio</title>
+    </head>
+    <body>
+      <p align="center">
+        <img src="csc106_banner.jpg">
+      <p align="center">
+        <img src="home button img CSC106.png">
+        <img src="about me button img CSC106.png">
+        <img src="buttons image CSC106.png">
+      <h1>Welcome to Ella's Portfolio</h1>
+       
+        <p>This webpage acts as a resource in regards to the programs I have created at 
+            <a target=" black" href="https://www.uri.edu">the University of Rhode Island.</a> 
+            I wrote this webpage using HTML which is a well known programming langauge.</p>
+    </body>
+</html>
