--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <p align="center">
         <img src="home button img CSC106.png">
         <img src="about me button img CSC106.png">
-          <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
+        <img src="buttons image CSC106.png">
       <h1>Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
