--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
       <p align="center">
         <img src="csc106_banner.jpg">
       <p align="center">
-        <img src="home button img CSC106.png">
+         <a href="index.html"><img src="home button img CSC106.png"></a>
         <img src="about me button img CSC106.png">
         <img src="buttons image CSC106.png">
         <h1>Welcome to Ella's Portfolio</h1>
