--- a/javascripts.html
+++ b/javascripts.html
@@ -12,7 +12,7 @@
         <img src="about me button img CSC106.png">
         <img src="buttons image CSC106.png">
         <h1>Welcome to Ella's Portfolio</h1>
-          <p>This webpoop acts as a resource in regards to the programs I have created at 
+          <p>3This webpage acts as a resource in regards to the programs I have created at 
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I wrote this webpage using HTML which is a well known programming langauge.</p>
     </body>
