--- a/javascripts.html
+++ b/javascripts.html
@@ -9,7 +9,7 @@
         <img src="csc106_banner.jpg">
       <p align="center">
          <a href="index.html"><img src="home button img CSC106.png"></a>
-        <img src="about me button img CSC106.png">
+        <a href="aboutme.html"><img src="about me button img CSC106.png"></a><img src="about me button img CSC106.png">
         <img src="buttons image CSC106.png">
         <h1>Welcome to Ella's Portfolio</h1>
           <p>3This webpage acts as a resource in regards to the programs I have created at 
