--- a/javascripts.html
+++ b/javascripts.html
@@ -10,7 +10,7 @@
       <p align="center">
          <a href="index.html"><img src="home button img CSC106.png"></a>
         <a href="aboutme.html"><img src="about me button img CSC106.png"></a><img src="about me button img CSC106.png">
-        <img src="buttons image CSC106.png">
+          <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
         <h1>Welcome to Ella's Portfolio</h1>
           <p>3This webpage acts as a resource in regards to the programs I have created at 
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
