--- a/aboutme.html
+++ b/aboutme.html
@@ -13,8 +13,9 @@
           <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
       <h1>Welcome to Ella's Portfolio</h1>
        
-        <p>2this website acts as a resource in regards to the programs I have created at 
+        <p>I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I wrote this webpage using HTML which is a well known programming langauge.</p>
+            I am majoring in Computer Science and either hope to minor in Cybersecurity or Mathematics. I Have a brother who goes to URI. 
+            And, I have two cats whose names are Peakey and Norm.</p>
     </body>
 </html>
