--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I wrote this webpage using HTML which is a well known programming langauge.</p>
+            I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
     </body>
 </html>
