--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
         <br><img src="imgURICSC1006.jpg">
+        <p align="right">
+            <img src="2imgCSC106">
     </body>
 </html>
