--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,9 @@
        
         <p>I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I am majoring in Computer Science and either hope to minor in Cybersecurity or Mathematics. I Have a brother who goes to URI. 
-            And, I have two cats whose names are Peakey and Norm.</p>
+            I am majoring in Computer Science and either hope to minor in Cybersecurity or Mathematics. I Have a brother who is a senior at URI 
+            and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
+            I enjoy going to the Cape Cod National Seashore in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
+            In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
     </body>
 </html>
