--- a/aboutme.html
+++ b/aboutme.html
@@ -19,5 +19,8 @@
             and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
             I enjoy going to the Cape Cod National Seashore in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
+        <img align="left" src="capecodimgcsc.HEIC">
+        <img align="center" src="normimgcsc.HEIC">
+        <img src="peakeyimgcsc.JPG">
     </body>
 </html>
