--- a/aboutme.html
+++ b/aboutme.html
@@ -22,5 +22,6 @@
         <img align="left" src="capecodimgcsc.HEIC">
         <img align="center" src="normimgcsc.HEIC">
         <img src="peakeyimgcsc.JPG">
+        <img align="right" src="IMGSKICSC.HEIC">
     </body>
 </html>
