--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
         <img align="left" width="100" height="100" src="capecodimgcsc.HEIC">
         <img align="center" height="100" width="100" src="normimgcsc.HEIC">
-        <img width="100" height="100" src="peakeyimgcsc.JPG">
+        <img align="center" width="100" height="100" src="peakeyimgcsc.JPG">
         <img align="right" width="100" height="100" src="IMGSKICSC.HEIC">
     </body>
 </html>
