--- a/aboutme.html
+++ b/aboutme.html
@@ -19,9 +19,8 @@
             and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
             I enjoy going to the Cape Cod National Seashore in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
-        <img align="left" width="100" height="100" src="capecodimgcsc.HEIC">
-        <img align="center" height="100" width="100" src="normimgcsc.HEIC">
-        <img align="center" width="100" height="100" src="peakeyimgcsc.JPG">
-        <img align="right" width="100" height="100" src="IMGSKICSC.HEIC">
+        <img align="left" width="100" height="100" src="IMG_6302.jpg">
+        <img align="center" height="100" width="100" src="IMG_6301.jpg">
+        <img align="right" width="100" height="100" src="IMG_6303.jpg">
     </body>
 </html>
