--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
             I enjoy going to the Cape Cod National Seashore in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
         <img align="left" width="300" height="300" src="IMG_6302.jpg">
-        <p><img align="center" height="300" width="300" src="IMG_6301.jpg"></p>
+        <img align="center" height="300" width="300" src="IMG_6301.jpg">
         <img align="right" width="300" height="300" src="IMG_6303.jpg">
     </body>
 </html>
