--- a/aboutme.html
+++ b/aboutme.html
@@ -19,8 +19,8 @@
             and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
             I enjoy going to the Cape Cod National Seashore in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
-        <img align="left" width="300" height="300" src="IMG_6302.jpg">
-        <center><img height="300" width="300" src="IMG_6301.jpg"></center>
-        <img align="right" width="300" height="300" src="IMG_6303.jpg">
+        <center><img width="300" height="300" src="IMG_6302.jpg">
+        <img height="300" width="300" src="IMG_6301.jpg">
+            <img width="300" height="300" src="IMG_6303.jpg"></center>
     </body>
 </html>
