--- a/aboutme.html
+++ b/aboutme.html
@@ -13,12 +13,12 @@
           <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
       <h1>Welcome to Ella's Portfolio</h1>
        
-        <p><center>I am a freshmen at
+        <p>I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I am majoring in Computer Science and either hope to minor in Cybersecurity or Mathematics. I Have a brother who is a senior at URI 
             and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
             I enjoy going to the Cape Cod National Seashore in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
-            In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</center></p>
+            In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
         <center><img width="300" height="300" src="IMG_6302.jpg">
         <img height="300" width="300" src="IMG_6301.jpg">
             <img width="300" height="300" src="IMG_6303.jpg"></center>
