--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>This webpage acts as a resource in regards to the programs I have created at 
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
-        <br><center><img align="right" width="530" height="330 src="imgURICSC1006.jpg">
-        <img align="right" width="530" height="330"src="2imgCSC106.jpg"></center>
+        <br><center><img width="530" height="330 src="imgURICSC1006.jpg">
+        <img width="530" height="330"src="2imgCSC106.jpg"></center>
     </body>
 </html>
