--- a/javascripts.html
+++ b/javascripts.html
@@ -12,8 +12,7 @@
         <a href="aboutme.html"><img src="about me button img CSC106.png"></a>
           <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
         <h1>Welcome to Ella's Portfolio</h1>
-          <p>3This webpage acts as a resource in regards to the programs I have created at 
-            <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I wrote this webpage using HTML which is a well known programming langauge.</p>
+          <p>Javascript
+                    </p>
     </body>
 </html>
