--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I am majoring in Computer Science and either hope to minor in Cybersecurity or Mathematics. I Have a brother who is a senior at URI 
             and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
-            I enjoy going to the Cape Cod National Seashore in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
+            I enjoy going to the    <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
         <center><img width="300" height="300" src="IMG_6302.jpg">
         <img height="300" width="300" src="IMG_6301.jpg">
