--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Ella's Programming Portfolio</title>
+        <link rel="stylesheet" href="glantz.css">
     </head>
     <body>
       <p align="center">
