--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
         <img src="csc106_banner.jpg">
       <p align="center">
           <a href="test.html"><img src="home.png"></a>
-          <a href="aboutme.html"><img src="about me button img CSC106.png"></a>
+          <a href="aboutme.html"><img src="about.png"></a>
           <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
       <h1>Welcome to Ella's Portfolio</h1>
        
