--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
       <p align="center">
           <a href="test.html"><img src="home.png"></a>
           <a href="aboutme.html"><img src="about.png"></a>
-          <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
+          <a href="javascripts.html"><img src="javascripts.png"></a>
       <h1>Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
