--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
           <a href="test.html"><img src="home.png"></a>
           <a href="aboutme.html"><img src="about.png"></a>
           <a href="javascripts.html"><img src="javascripts.png"></a>
+          <a href="apps.html"><img src="apps.png"></a>
       <h1>Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
