--- a/javascripts2.html
+++ b/javascripts2.html
@@ -11,7 +11,7 @@
       <p align="center">
           <a href="test.html"><img src="home.png"></a>
           <a href="aboutme.html"><img src="about.png"></a>
-          <a href="javascripts.html"><img src="javascripts.png"></a>
+          <a href="javascripts2.html"><img src="javascripts.png"></a>
           <a href="apps.html"><img src="apps.png"></a>
       <h1>Welcome to Ella's Portfolio</h1>
        
