--- a/test.html
+++ b/test.html
@@ -10,9 +10,9 @@
         <img src="csc106_banner.jpg">
       <p align="center">
           <a href="test.html"><img src="home.png"></a>
-          <a href="aboutme.html"><img src="about.png"></a>
+          <a href="aboutme2.html"><img src="about.png"></a>
           <a href="javascripts2.html"><img src="javascripts.png"></a>
-          <a href="apps.html"><img src="apps.png"></a>
+          <a href="apps2.html"><img src="apps.png"></a>
       <h1>Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
