--- a/apps2.html
+++ b/apps2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <p align="center">
-        <img src="csc106_banner.jpg">
+        <img src="myBanner-2.jpg">
       <p align="center">
           <a href="test.html"><img src="home.png"></a>
           <a href="aboutme2.html"><img src="about.png"></a>
