--- a/javascripts2.html
+++ b/javascripts2.html
@@ -13,7 +13,7 @@
           <a href="aboutme2.html"><img src="about.png"></a>
           <a href="javascripts2.html"><img src="javascripts.png"></a>
           <a href="apps2.html"><img src="apps.png"></a>
-      <h1>Welcome to Ella's Portfolio</h1>
+      <h1>Javascripts</h1>
        
         <p>JavaScript</p>
      
