--- a/apps2.html
+++ b/apps2.html
@@ -13,12 +13,9 @@
           <a href="aboutme2.html"><img src="about.png"></a>
           <a href="javascripts2.html"><img src="javascripts.png"></a>
           <a href="apps2.html"><img src="apps.png"></a>
-      <h1>Welcome to Ella's Portfolio</h1>
+      <h1>Apps</h1>
        
-        <p>This webpage acts as a resource in regards to the programs I have created at 
-            <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
-        <br><center><img width="530" height="330" src="uriimg.jpg">
-        <img width="530" height="330"src="2imgCSC106.jpg"></center>
+        <p>Apps, TBC</p>
+        
     </body>
 </html>
