--- a/aboutme2.html
+++ b/aboutme2.html
@@ -13,7 +13,7 @@
           <a href="aboutme2.html"><img src="about.png"></a>
           <a href="javascripts2.html"><img src="javascripts.png"></a>
           <a href="apps2.html"><img src="apps.png"></a>
-      <h1>About me!</h1>
+      <h1 id="aboutme-h1">About me!</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
