--- a/aboutme2.html
+++ b/aboutme2.html
@@ -15,10 +15,14 @@
           <a href="apps2.html"><img src="apps.png"></a>
       <h1 id="aboutme-h1">About me!</h1>
        
-        <p>This webpage acts as a resource in regards to the programs I have created at 
+       <p>I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
-        <br><center><img width="530" height="330" src="uriimg.jpg">
-        <img width="530" height="330"src="2imgCSC106.jpg"></center>
+            I am majoring in Computer Science and either hope to minor in <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
+            and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
+            I enjoy going to the    <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
+            In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
+        <center><img width="300" height="300" src="IMG_6302.jpg">
+        <img height="300" width="300" src="IMG_6301.jpg">
+            <img width="300" height="300" src="IMG_6303.jpg"></center>
     </body>
 </html>
