--- a/test.html
+++ b/test.html
@@ -9,10 +9,14 @@
       <p align="center">
         <img src="myBanner-2.jpg">
       <p align="center">
-          <a href="test.html"><img src="home.png"></a>
-          <a href="aboutme2.html"><img src="about.png"></a>
-          <a href="javascripts2.html"><img src="javascripts.png"></a>
-          <a href="apps2.html"><img src="apps.png"></a>
+          <table id="button-table">
+              <tr>
+         <td><a href="test.html"><img src="home.png"></a>
+         <td><a href="aboutme2.html"><img src="about.png"></a>
+         <td><a href="javascripts2.html"><img src="javascripts.png"></a>
+         <td><a href="apps2.html"><img src="apps.png"></a></td>
+              </tr>
+        </table>
       <h1>Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
