--- a/aboutme2.html
+++ b/aboutme2.html
@@ -23,7 +23,7 @@
             I enjoy going to the    <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
         <center>
-        <img height="300" width="300" src="IMG_6301.jpg">
+        <img id="pic-1" "height="300" width="300" src="IMG_6301.jpg">
             <img width="300" height="300" src="IMG_6303.jpg"></center>
     </body>
 </html>
