--- a/aboutme2.html
+++ b/aboutme2.html
@@ -15,7 +15,7 @@
           <a href="apps2.html"><img src="apps.png"></a>
       <h1 id="aboutme-h1">About me!</h1>
        
-       <p><img id="pic1" width="300" height="300" src="IMG_6302.jpg"><di>
+       <p><img id="pic1" width="300" height="300" src="IMG_6302.jpg"><di width="800">
            I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I am majoring in Computer Science and either hope to minor in <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
