--- a/aboutme2.html
+++ b/aboutme2.html
@@ -8,6 +8,7 @@
     <body>
       <p align="center">
         <img src="myBanner-2.jpg">
+      <div id="under.banner">
       <p align="center">
           <a href="test.html"><img src="home.png"></a>
           <a href="aboutme2.html"><img src="about.png"></a>
@@ -15,14 +16,14 @@
           <a href="apps2.html"><img src="apps.png"></a>
       <h1 id="aboutme-h1">About me!</h1>
        
-       <p><img id="pic1" width="300" height="300" src="IMG_6302.jpg"><div width="800">
+       <p><img id="pic1" width="300" height="300" src="IMG_6302.jpg">
            I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I am majoring in Computer Science and either hope to minor in <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
             and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
             I enjoy going to the    <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
-            In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p></div>
-        <center>
+            In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
+          <center></div>
         <img id="pic-1" "height="300" width="300" src="IMG_6301.jpg">
             <img width="300" height="300" src="IMG_6303.jpg"></center>
     </body>
