--- a/aboutme2.html
+++ b/aboutme2.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="glantz.css">
     </head>
     <body>
+        <div id="box">
       <p align="center">
         <img src="myBanner-2.jpg">
-      <div id="under.banner">
       <p align="center">
           <a href="test.html"><img src="home.png"></a>
           <a href="aboutme2.html"><img src="about.png"></a>
