--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="glantz.css">
     </head>
     <body>
+        <div id="container">
       <p align="center">
         <img src="myBanner-2.jpg">
           <table id="button-table">
@@ -24,5 +25,6 @@
             I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
         <br><center><img width="530" height="330" src="uriimg.jpg">
         <img width="530" height="330"src="2imgCSC106.jpg"></center>
+        </div>
     </body>
 </html>
