--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="glantz.css">
     </head>
     <body>
-        <div id="container">
+        <div class="container">
       <p align="center">
         <img src="myBanner-2.jpg">
           <table id="button-table">
