--- a/javascripts2.html
+++ b/javascripts2.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="glantz.css">
     </head>
     <body>
+        <div class="container"
       <p align="center">
         <img src="myBanner-2.jpg">
       <p align="center">
@@ -16,6 +17,6 @@
       <h1>Javascripts</h1>
        
         <p>JavaScript</p>
-     
+        </div>
     </body>
 </html>
