--- a/aboutme2.html
+++ b/aboutme2.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="glantz.css">
     </head>
     <body>
-        <div id="box">
+        <div class="container">
       <p align="center">
         <img src="myBanner-2.jpg">
       <p align="center">
@@ -26,5 +26,6 @@
           <center></div>
         <img id="pic-1" "height="300" width="300" src="IMG_6301.jpg">
             <img width="300" height="300" src="IMG_6303.jpg"></center>
+       </div>                                              
     </body>
 </html>
