--- a/aboutme2.html
+++ b/aboutme2.html
@@ -23,7 +23,7 @@
             and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
             I enjoy going to the    <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
-          <center></div>
+          <center>
         <img id="pic-1" "height="300" width="300" src="IMG_6301.jpg">
             <img width="300" height="300" src="IMG_6303.jpg"></center>
        </div>                                              
