--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <body>
       <p align="center">
         <img src="csc106_banner.jpg">
+          <table class="center">
       <p align="center">
           <a href="index.html"><img src="home button img CSC106.png"></a>
           <a href="aboutme.html"><img src="about me button img CSC106.png"></a>
           <a href="javascripts.html"><img src="buttons image CSC106.png"></a>
+        </table>
       <h1>Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
