--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
       <p align="center">
         <img src="myBanner-2.jpg">
           <table id="button-table">
+              <table class="center">
               <tr>
          <p align="center">
          <td><a href="test.html"><img src="home.png"></a>
