--- a/test.html
+++ b/test.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+   
         <meta charset="utf-8">
         <title>Ella's Programming Portfolio</title>
         <link rel="stylesheet" href="glantz.css">
     </head>
+    <center>
     <body>
         <div class="container">
       <p align="center">
@@ -26,4 +28,5 @@
         <img width="300" height="300"src="2imgCSC106.jpg"></center>
         </div>
     </body>
+    </center>
 </html>
