--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
+            <br>I wrote this webpage using <strong>HTML</strong> which is a well known programming langauge.</p>
         <br><center><img width="300" height="300" src="uriimg.jpg">
         <img width="300" height="300"src="2imgCSC106.jpg"></center>
         </div>
