--- a/aboutme2.html
+++ b/aboutme2.html
@@ -25,9 +25,12 @@
        <p>
            I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
-            I am majoring in Computer Science and either hope to minor in <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
-            and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.  
-            I enjoy going to the    <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. My two favorite bands are Black Sabbath and Alice in Chains. 
+            I am majoring in Computer Science and either hope to minor in <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. 
+           <br>I Have a brother who is a senior at URI 
+            and my mom also went to URI. I have two cats whose names are Peakey and Norm. I love nature and being in nature.
+           <br>
+            I enjoy going to the    <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
+           <br>My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! Although I love the summer, I think I appreicate the fall and winter more.</p>
           <center>
               <img id="pic1" width="200" height="200" src="IMG_6302.jpg>
