--- a/aboutme2.html
+++ b/aboutme2.html
@@ -33,7 +33,7 @@
             In the winter I go skiing in New Hampshire with my family! 
            <br>Although I love the summer, I think I appreicate the fall and winter more.</p>
         
-            <div class="pic-container">
+            <img class="pic-container" src="IMG_6302.jpg"></p>
               <img id="pic1" width="200" height="200" src="IMG_6302.jpg>
         <img id="pic-1" "height="200" width="200" src="IMG_6301.jpg">
             <img width="200" height="200" src="IMG_6303.jpg">
