--- a/aboutme2.html
+++ b/aboutme2.html
@@ -31,9 +31,8 @@
            <br>I love nature and being in nature. I enjoy going to the <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
            <br>My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! 
-           <br>Although I love the summer, I think I appreicate the fall and winter more.</p>
+           <br>Although I love the summer, I think I appreicate the fall and winter more.<img class="pic-container" src="IMG_6302.jpg"></p></p>
         
-            <img class="pic-container" src="IMG_6302.jpg"></p>
         <img id="pic-1" "height="200" width="200" src="IMG_6301.jpg">
             <img width="200" height="200" src="IMG_6303.jpg">
               </div>
