--- a/aboutme2.html
+++ b/aboutme2.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <title>Ella's Programming Portfolio</title>
         <link rel="stylesheet" href="glantz.css">
+        <style> body{
+            background-image: "paper.gif";
+            }
+        </style>
     </head>
     <center>
     <body>
