--- a/aboutme2.html
+++ b/aboutme2.html
@@ -5,7 +5,7 @@
         <title>Ella's Programming Portfolio</title>
         <link rel="stylesheet" href="glantz.css">
         <style> body{
-            background-image: "myBackground.jpg";
+            background-image: url("myBackground.jpg");
             }
         </style>
     </head>
