--- a/aboutme2.html
+++ b/aboutme2.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="glantz.css">
         <style> body{
             background-image: url("myBackground.jpg");
+            background-repeat: no-repeat;
+            background-attachment; fixed;
+            background-size: cover;
             }
         </style>
     </head>
