--- a/aboutme2.html
+++ b/aboutme2.html
@@ -36,7 +36,7 @@
            <br><strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
             <br> and my mom also went to URI. I have two cats whose names are Peakey and Norm. 
            <br>I love nature and being in nature. I enjoy going to the <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
-           <br>My two favorite bands are Black Sabbath and Alice in Chains. 
+           <br>My two favorite bands are Black Sabbath and Alice in Chains. <img class="pic-container" src="IMG_6301.jpg">
             In the winter I go skiing in New Hampshire with my family! 
            <br>Although I love the summer, I think I appreicate the fall and winter more.<img class="pic-container" src="IMG_6302.png"></p></p>
        
