--- a/aboutme2.html
+++ b/aboutme2.html
@@ -38,7 +38,7 @@
            <br>I love nature and being in nature. I enjoy going to the <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
            <br>My two favorite bands are Black Sabbath and Alice in Chains. <img class="pic-container" src="IMG_6301.png">
             In the winter I go skiing in New Hampshire with my family! 
-           <br>Although I love the summer, I think I appreicate the fall and winter more.<img class="pic-container" src="IMG_6302.png" align="right"></p></p>
+           <br>Although I love the summer, I think I appreicate the fall and winter more.<img id="pic-one" src="IMG_6302.png" alt="" width="200" height="200"></p></p>
        
         <tr>
                 <td><img width="100" height="100" src="IMG_6303.jpg"></td>
