--- a/aboutme2.html
+++ b/aboutme2.html
@@ -33,10 +33,10 @@
            I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I am majoring in Computer <img class="pic-container" src="IMG_3225.png">Science and either hope to minor in 
-           <br><strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
+           <img class="pic-container" src="IMG_6301.png"><br><strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
             <br> and my mom also went to URI. I have two cats whose names are Peakey and Norm. 
            <br>I love nature and being in nature. I enjoy going to the <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
-           <br>My two favorite bands are Black Sabbath and Alice in Chains. <img class="pic-container" src="IMG_6301.png">
+           <br>My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! 
            <br>Although I love the summer, I think I appreicate the fall and winter more.<img id="pic-one" src="IMG_6302.png" alt="" width="200" height="200"></p></p>
        
