--- a/javascripts2.html
+++ b/javascripts2.html
@@ -5,7 +5,7 @@
         <title>Ella's Programming Portfolio</title>
         <link rel="stylesheet" href="glantz.css">
     </head>
-    <body id="javapage">
+    <body>
         <div class="container"
       <p align="center">
         <img src="myBanner-2.jpg">
