--- a/apps2.html
+++ b/apps2.html
@@ -5,7 +5,7 @@
         <title>Ella's Programming Portfolio</title>
         <link rel="stylesheet" href="glantz.css">
     </head>
-    <body>
+    <body id="appspage">
         <div class="container"
       <p align="center">
         <img src="myBanner-2.jpg">
