--- a/aboutme2.html
+++ b/aboutme2.html
@@ -30,7 +30,7 @@
       <h1 id="aboutme-h1">About me!</h1>
            
        
-       <p align="left">
+       <p align="right">
            I am a freshmen at
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I am majoring in Computer <img class="pic-container" src="IMG_3225.png">Science and either hope to minor in 
