--- a/aboutme2.html
+++ b/aboutme2.html
@@ -40,7 +40,7 @@
             <br> and my mom also went to URI. I have two cats whose names are Peakey and Norm.
            <br>I love nature and being in nature. I enjoy going to the <a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
            <br>My two favorite bands are Black Sabbath and Alice in Chains. 
-            In the winter I go skiing in New Hampshire with my family! 
+            In the winter I go skiing in New <br>Hampshire with my family! 
            <br>Although I love the summer, I think I appreicate the fall and winter more.</p></td>
                 <td><img class="pic-container" src="MG_6302.png"></td>
                 </tr>
