--- a/aboutme2.html
+++ b/aboutme2.html
@@ -42,7 +42,7 @@
            <br>My two favorite bands are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New <br>Hampshire with my family! 
            <br>Although I love the summer, I think I appreicate the fall and winter more.</p></td>
-                <td><img class="pic-container" src="MG_6302.png"></td>
+                <td><img class="pic-container" src="IMG_6302.png"></td>
                 </tr>
        
         <tr>
