--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
          <td><a href="apps2.html"><img src="apps.png"></a></td>
               </tr>
         </table>
-      <h1>Welcome to Ella's Portfolio</h1>
+      <h1 id="home-header">Welcome to Ella's Portfolio</h1>
        
         <p>This webpage acts as a resource in regards to the programs I have created at 
             <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
