--- a/javascripts2.html
+++ b/javascripts2.html
@@ -16,7 +16,7 @@
           <a href="apps2.html"><img src="apps.png"></a>
       <h1>Javascripts</h1>
        
-        <p>JavaScript</p>
+        <p>JavaScript. Through out this year I will include javascripts programs I create!</p>
         </div>
     </body>
 </html>
