--- a/aboutme2.html
+++ b/aboutme2.html
@@ -35,7 +35,7 @@
             <td><p id="aboutme-paragraph">
              I am a freshmen at <a target=" blank" href="https://www.uri.edu">the University of Rhode Island.</a> 
             I am majoring in Computer <br> Science and either hope to minor in 
-          <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. I Have a brother who is a senior at URI 
+          <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. <br>I Have a brother who is a senior at URI 
             and my mom also went to URI. <br> I have two cats whose names are Peakey and Norm.
            <br>I love nature and being in nature. I enjoy going to the <br><a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
            My two favorite bands are Black Sabbath<br> and Alice in Chains. 
