--- a/aboutme2.html
+++ b/aboutme2.html
@@ -38,7 +38,7 @@
           <strong>Cybersecurity</strong> or <strong>Mathematics</strong>. <br>I Have a brother who is a senior at URI 
             and my mom also went to URI. <br> I have two cats whose names are Peakey and Norm.
            <br>I love nature and being in nature. I enjoy going to the <br><a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
-           My two favorite bands are Black Sabbath<br> and Alice in Chains. 
+           My two favorite bands <br> are Black Sabbath and Alice in Chains. 
             In the winter I go skiing in New Hampshire with my family! 
            <br>Although I love the summer, I think I appreicate the fall and winter more.</p></td>
                 <td><img class="pic-container" src="IMG_6302.png"></td>
