--- a/aboutme2.html
+++ b/aboutme2.html
@@ -39,8 +39,8 @@
             and my mom also went to URI. <br> I have two cats whose names are Peakey and Norm.
            <br>I love nature and being in nature. I enjoy going to the <br><a target=" blank" href="https://www.nps.gov/caco/index.htm">Cape Cod National Seashore</a> in Eastham. 
            My two favorite bands <br> are Black Sabbath and Alice in Chains. 
-            In the winter I go skiing in New Hampshire with my family! 
-           <br>Although I love the summer, I think I appreicate the fall and winter more.</p></td>
+            In the winter I go skiing in <br> New Hampshire with my family! 
+           Although I love the summer, <br>I think I appreicate the fall and winter more.</p></td>
                 <td><img class="pic-container" src="IMG_6302.png"></td>
                 <td><img class="pic-container" src="IMG_6303.png"></td>
                 </tr>
