--- a/javascripts2.html
+++ b/javascripts2.html
@@ -15,6 +15,7 @@
           <a href="javascripts2.html"><img src="javascripts.png"></a>
           <a href="apps2.html"><img src="apps.png"></a>
       <h1>Javascripts</h1>
+        <h2><a href="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784">glantz_bitmoji </a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
        
         <p>JavaScript. Through out this year I will include javascripts programs I create!</p>
         </div>
