--- a/javascripts2.html
+++ b/javascripts2.html
@@ -16,7 +16,7 @@
           <a href="apps2.html"><img src="apps.png"></a>
       <h1>Javascripts</h1>
         <h2><a href="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784">glantz_bitmoji </a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
-       
+       <h2><a href="https://www.khanacademy.org/computer-programming/glantz_dancing_bitmoji/6163565849395200">glantz_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_dancing_bitmoji/6163565849395200/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
         </div>
     </body>
 </html>
