--- a/javascripts2.html
+++ b/javascripts2.html
@@ -15,9 +15,18 @@
           <a href="javascripts2.html"><img src="javascripts.png"></a>
           <a href="apps2.html"><img src="apps.png"></a>
       <h1>Javascripts</h1>
-       <h2><a href="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784">glantz_bitmoji </a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
-       <h2><a href="https://www.khanacademy.org/computer-programming/glantz_dancing_bitmoji/5886685296508928">Glantz_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_dancing_bitmoji/5886685296508928/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>
-       <h2><a href="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328">Glantz_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <table>
+  <tr>
+    <th><h2><a href="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784">glantz_bitmoji </a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_bitmoji/4927228458614784/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p></th>
+  </tr>
+  <tr>
+    <td> <h2><a href="https://www.khanacademy.org/computer-programming/glantz_dancing_bitmoji/5886685296508928">Glantz_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_dancing_bitmoji/5886685296508928/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p></td>
+  </tr>
+  <tr>
+    <td><h2><a href="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328">Glantz_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_racing_bitmoji/4904492965347328/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+  </tr>
+</table>
+       
         </div>
     </body>
 </html>
