--- a/javascripts2.html
+++ b/javascripts2.html
@@ -32,7 +32,7 @@
            
         <tr>
             <th><h4><a href="https://www.khanacademy.org/computer-programming/glantz_follow/4836850774622208">glantz_Follow</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_follow/4836850774622208/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p></th>
-            <th><h4>><a href="https://www.khanacademy.org/computer-programming/glantz_resizebitmoji/4697070229307392">glantz_resizeBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_resizebitmoji/4697070229307392/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p>
+            <th><h4><a href="https://www.khanacademy.org/computer-programming/glantz_decision/5250389574205440">glantz_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_decision/5250389574205440/embed.js?editor=no&buttons=no&author=no&embed=yes"</a></p></script></p>
          </tr>
             </table>
                 
