--- a/javascripts2.html
+++ b/javascripts2.html
@@ -35,6 +35,11 @@
             <th><h4><a href="https://www.khanacademy.org/computer-programming/glantz_decision/5250389574205440">glantz_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_decision/5250389574205440/embed.js?editor=no&buttons=no&author=no&embed=yes"</a></p></script></p>
          </tr>
             </table>
+       <table>
+        <tr>
+            <th><h5><h2><a href="https://www.khanacademy.org/computer-programming/glantz_zoo/6608948073381888">glantz_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/glantz_zoo/6608948073381888/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p></th>
+         </tr>
+            </table>
                 
         </div>
     </body>
