--- a/javascripts2.html
+++ b/javascripts2.html
@@ -57,8 +57,8 @@
          <tr>
             <th>
                <h5>
-               <h2><a href="https://www.khanacademy.org/computer-programming/glantz_zoo/6608948073381888">glantz_zoo</a></h2>
-               <script src="https://www.khanacademy.org/computer-programming/glantz_zoo/6608948073381888/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></p>
+               <a href="https://www.khanacademy.org/computer-programming/glantz_zoo/6608948073381888"><img src="glantz_zoo.png"</a>
+            
             </th>
          </tr>
       </table>
