--- a/javascripts2.html
+++ b/javascripts2.html
@@ -62,8 +62,8 @@
 
             </th>
             <th>
-                                                                                                                               <p></p>
-                                                                                                                               </th>
+               <a href="https://www.khanacademy.org/computer-programming/glantz_tag/5035392633978880"><im src="glantz_tagpic.png"</a>                                                                                                        
+                                                                                                                                 </th>                                                                                                           
          </tr>
       </table>
       </div>
