--- a/javascripts2.html
+++ b/javascripts2.html
@@ -65,6 +65,10 @@
                <a href="https://www.khanacademy.org/computer-programming/glantz_tag/5035392633978880"><img src="glantz_tagpic.png"</a>                                                                                                        
                                                                                                                                  </th>                                                                                                           
          </tr>
+                                                                                                                                  <th>
+               <a href="https://www.khanacademy.org/computer-programming/glantz_contacts/5734006939238400">img src"><img src="glantz_tagpic.png"</a>                                                                                                        
+                                                                                                                                 </th>                                                                                                           
+         </tr>
       </table>
       </div>
    </body>
