--- a/javascripts2.html
+++ b/javascripts2.html
@@ -53,7 +53,7 @@
          <tr>
             <th>
            
-               <a href="https://www.khanacademy.org/computer-programming/glantz_zoo/6608948073381888"><img src="glantz_zoo.png"</a>
+               <a href="https://www.khanacademy.org/computer-programming/glantz_zoo/6608948073381888"><img src="glantz_zoo.png" width="200"</a>
 
             </th>
             <th>
