--- a/javascripts2.html
+++ b/javascripts2.html
@@ -71,7 +71,7 @@
                <a href="https://www.khanacademy.org/computer-programming/glantz_game/5619518260953088"><img src="glantzgame_pic.png" width="400"</a>                                                                                                        
             </th> 
             <th>
-               <a href="https://www.khanacademy.org/computer-programming/glantz_frogger/5216481656750080"><img src="glantzgame_pic.png" width="400"</a>                                                                                                        
+               <a href="https://www.khanacademy.org/computer-programming/glantz_frogger/5216481656750080"><img src="glantz_frogger.png" width="400"</a>                                                                                                        
             </th> 
          </tr>
       </table>
