--- a/javascripts2.html
+++ b/javascripts2.html
@@ -74,7 +74,7 @@
                <a href="https://www.khanacademy.org/computer-programming/glantz_frogger/5216481656750080"><img src="glantz_frogger.png" width="400"</a>                                                                                                        
             </th> 
             <th>
-               <a href="https://www.khanacademy.org/computer-programming/glantz_memory/5033336290459648"><img src="glantz_frogger.png" width="400"</a>                                                                                                        
+               <a href="https://www.khanacademy.org/computer-programming/glantz_memory/5033336290459648"><img src="glantz_memory.png" width="400"</a>                                                                                                        
             </th> 
          </tr>
       </table>
