--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -22,7 +22,7 @@
         </table>
       <h1 id="home-header">Ella's Final Project!</h1>
        
-        <p>For my final Project i created a user freindly app that allows people to explore drawing in a simple way.<br>
+        <p>For my final Project I created a user freindly app that allows people to explore drawing in a simple way.<br>
         This app allows mistakes to happen, because an erase button is included! The user has many color options they can use to create their picture.<br>
         For some people, creative activities are challenging. Therefore, this app includes an option where you can be given a suggestion of what to draw!<br>
         Likewise, for young children this app can be interatcive because they can recieve positive feedback on their drawings with just on click. Children spend <br>
