--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -31,7 +31,7 @@
             <br>This is a <strong>great</strong> way for children to spend free time doing something productive. Likewise, a child learning to be confindnet<br>
             is necessary for future development, and this app can help with that!</p>
             <h2 id="finalProject-header"> Draw A Picture!</h2>
-        <a href="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384">Final Project!</a></h2><script src="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
+        <a href="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384"></a></h2><script src="https://www.khanacademy.org/computer-programming/final-project-draw-real-one/5950600204304384/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></p>
         </div>
     </body>
     </center>
