--- a/finalProjectPage.html
+++ b/finalProjectPage.html
@@ -23,10 +23,10 @@
       <h1 id="home-header">Ella's Final Project!</h1>
        
         <p>For my final Project I created a user friendly app that allows people to explore drawing in a simple way.<br>
-        In my app I included an erase button because I wanted people to have the option to alter their picture, 
-        or they can utilize this aspect if they make a mistake. The user has many color options they can use to create their 
+        In my app I included an erase button because I wanted people to have the option to alter their picture,<br> 
+        or they can utilize this aspect if they make a mistake. The user has many color options they can use to create their <br>
         picture. For some people, creative activities are challenging. Therefore, this app includes an option where you can <br>
-        be given a suggestion of what to draw!<br> Likewise, for young children this app can be an interatcive actvity considering<br>
+        be given a suggestion of what to draw! Likewise, for young children this app can be an interatcive actvity considering<br>
         they can recieve positive feedback on their drawings with just one click. The app has the duel benefit of creative time use <br>
         and growing your child's confindence. This is a <strong>great</strong> way for children to spend free time doing something<br>
         productive. Likewise, a child's confidence growing and developing is necessary for future development, and this app can help with that!</p>
